--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
             <a class="js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="sidebar-nav-item">
-            <a class="js-scroll-trigger" href="#services">Calendar</a>
+            <a class="js-scroll-trigger" href="#portfolio">Calendar</a>
         </li>
         <li class="sidebar-nav-item">
-            <a class="js-scroll-trigger" href="#portfolio">Add Event</a>
+            <a class="js-scroll-trigger" href="https://www.surveymonkey.com/r/KNDBZMN" target="_blank">Add Event</a>
         </li>
         <li class="sidebar-nav-item">
-            <a class="js-scroll-trigger" href="#contact">Contact</a>
+            <a href="mailto:sigchi-dev-fund@acm.org"
+               target="_blank">Contact Us!</a>
         </li>
     </ul>
 </nav>
@@ -94,7 +95,8 @@
                     opportunities to connect virtually these days. In support of this trend and in response to current
                     travel restrictions, both for the present and for more sustainable futures, we plan to build out a
                     calendar of virtual events for our global membership. So if you’re doing a virtual event (or series)
-                    in the near future, please fill out this 3-min survey so it can be added to the calendar. Updates
+                    in the near future, please fill out this <a href="https://www.surveymonkey.com/r/KNDBZMN">3-min
+                        survey</a> so it can be added to the calendar. Updates
                     will be posted on SIGCHI's medium to guide you to this virtual calendar.
 
                 </p>
