--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     will be posted on SIGCHI's medium to guide you to this virtual calendar.
 
                 </p>
-                <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
+                <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">Browse Events</a>
             </div>
         </div>
     </div>
