--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         </div>
         <div class="responsive-iframe-container d-md-none">
 
-            <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Africa%2FMaputo&amp;src=cnIzY25rNzFxaXNmamc2cDk3Y2hoZnJwdm9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23F4511E&amp;mode=AGENDA&amp;showNav=0&amp;showPrint=1&amp;showTabs=0&amp;showCalendars=1&amp;showTz=1"
-                    style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?height=800&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Africa%2FMaputo&amp;src=cnIzY25rNzFxaXNmamc2cDk3Y2hoZnJwdm9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23F4511E&amp;mode=AGENDA&amp;showNav=0&amp;showPrint=1&amp;showTabs=0&amp;showCalendars=1&amp;showTz=1"
+                    style="border:solid 1px #777" width="800" height="800" frameborder="0" scrolling="no"></iframe>
         </div>
         <div class="container text-center">
             <br>
@@ -134,9 +134,9 @@
     <div class="container text-center">
         <h2 class="mb-4">Want to add your event?</h2>
         Please fill this short survey or contact us <br><br>
-        <a href="https://www.surveymonkey.com/r/KNDBZMN" target="_blank" class="btn btn-xl btn-dark">Add Event!</a>
+        <a href="https://www.surveymonkey.com/r/KNDBZMN" target="_blank" class="btn btn-xl btn-dark mr-4">Add Event!</a>
         <a href="mailto:sigchi-dev-fund@acm.org?subject=Add My Event!"
-           target="_blank" class="btn btn-xl btn-light mr-4">Contact Us!</a>
+           target="_blank" class="btn btn-xl btn-light ">Contact Us!</a>
 
     </div>
 </section>
